--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@quasar/app-webpack": "^3.13.0",
+    "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "assert": "^2.1.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "@types/node": "^12.20.21",
-    "@quasar/app-webpack": "^3.13.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "overridesComments": {
     "typescript-1": "npm and pnpm hoist newer version of TypeScript, which is incompatible with app-webpack v3 due to fork-ts-checker-webpack-plugin",
