--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "core-js": "^3.31.1",
+    "dayjs": "^1.11.12",
     "just-clone": "^6.2.0",
     "mitt": "^3.0.1",
     "quasar": "^2.16.0",
