--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.12",
     "just-clone": "^6.2.0",
     "mitt": "^3.0.1",
+    "pinia": "^2.2.2",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
