feat: add env variables

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VUE_APP_BASE_URL=/
-VUE_APP_API_URL=http://test.enter-systems.ru/
+VUE_APP_API_URL=http://enter.local/
+VUE_APP_WAMP=ws://test.enter-systems.ru/
