--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "logs-project",
+  "name": "log_viewer",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "description": "Log Viewer Project",
+  "productName": "Log Viewer",
   "author": "",
   "private": true,
   "scripts": {
